deployment/nginx/nginxIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.centennialcluster.dev
    secretName: echo-tls
  rules:
  - host: "app.centennialcluster.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: express-portfolio-assignment
            port:
              number: 80
